notejam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: notejam
  type: ClusterIP
