ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam
  annotations:
    ingressClassName: nginx
spec:
  rules:
    - host: notejam.neuralcompany.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam
                port:
                  number: 80
